--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,6 @@ platform = atmelavr
 board = ATmega328P
 framework = arduino
 upload_command = pymcuprog write -i isp -f $SOURCE --erase --verify
+build_src_filter = 
+    +<../avrc/>
+    -<*>
